name:                my-taffybar
version:             0.1.0
author:              Will Price
maintainer:          will.price94@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable my-taffybar
  hs-source-dirs:      .
                     , src
  main-is:             taffybar.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , directory
                     , filepath
                     , gtk3
                     , gtk-traymanager>=0.1.6
                     , taffybar
                     , xmonad-contrib>=0.13
                     , X11>=1.8
  default-language:    Haskell2010
